--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@
     justify-content: space-between;
     align-items: center;
     margin: 40px 0px;
+    margin-bottom: 80px;
     
   }
   .banner-img img {
@@ -78,6 +79,28 @@
     cursor: pointer;
   }
 
+  /* Profile Card Design */
+  .profiles{
+    position: absolute;
+    background: var(--background-color);
+    bottom:-80px;
+    left: 800px;
+    box-shadow: 0px 2px 30px 0px rgba(0, 0, 0, 10);
+    padding: 20px;
+    padding-right: 220px;
+  }
+  .profile-info{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 30px;
+    
+  }
+  .profile-info img{
+    width: 75px;
+    height: 72px;
+    border-radius: 50%;
+  }
   @media only screen and (min-width: 200px) and (max-width: 576px){
     
 /* Navbar style */
@@ -114,5 +137,26 @@
     width: 100%;
     height: 280px;
     margin-top: 40px;
+  }
+   /* Profile Card Design */
+   .profiles{
+    position: absolute;
+    bottom: -240px;
+    left: 20px;
+    box-shadow: 0px 2px 30px 0px rgba(0, 0, 0, 10);
+    padding: 10px 40px;
+    
+  }
+  .profile-info{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 30px;
+    
+  }
+  .profile-info img{
+    width: 75px;
+    height: 72px;
+    border-radius: 50%;
   }
   }
